read_only and volumes added for #3061
- read_only and volumes (in Dockerfiles) for harbor
- read_only and volumes (in Compose file) for notary
- read_only and volumes (in Dockerfiles) for clair

--- a/make/common/nginx/Dockerfile
+++ b/make/common/nginx/Dockerfile
@@ -5,6 +5,10 @@ RUN tdnf install -y nginx \
     && ln -sf /dev/stderr /var/log/nginx/error.log \
     && mkdir -p /var/run
 
+VOLUME ["/var/cache/nginx"]
+VOLUME ["/var/log/nginx"]
+VOLUME ["/var/run"]
+
 EXPOSE 80
 STOPSIGNAL SIGQUIT
 
