healthcheck added for:
- vmware/registry
- vmware/nginx-photon
- vmware/harbor-adminserver
- vmware/harbor-ui
- vmware/harbor-jobservice

--- a/make/common/nginx/Dockerfile
+++ b/make/common/nginx/Dockerfile
@@ -5,7 +5,9 @@ RUN tdnf install -y nginx \
     && ln -sf /dev/stderr /var/log/nginx/error.log \
     && mkdir -p /var/run
 
+ENV PORT 80
 EXPOSE 80
 STOPSIGNAL SIGQUIT
 
+HEALTHCHECK CMD curl localhost:$PORT || exit 1
 CMD ["nginx", "-g", "daemon off;"]
