--- a/make/photon/adminserver/Dockerfile
+++ b/make/photon/adminserver/Dockerfile
@@ -5,4 +5,6 @@ COPY ./make/dev/adminserver/harbor_adminserver /harbor/
 
 RUN chmod u+x /harbor/harbor_adminserver
 WORKDIR /harbor/
+
+HEALTHCHECK CMD curl http://localhost:80/v2 || exit 1
 ENTRYPOINT ["/harbor/harbor_adminserver"]
