--- a/make/photon/registry/Dockerfile
+++ b/make/photon/registry/Dockerfile
@@ -10,6 +10,10 @@ COPY binary/registry /usr/bin
 RUN chmod u+x /usr/bin/registry
 
 VOLUME ["/var/lib/registry"]
+
+ENV PORT 5000
 EXPOSE 5000
+HEALTHCHECK CMD curl http://localhost:$PORT/v2 || exit 1
+
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["/etc/docker/registry/config.yml"]
