--- a/.drone.yml
+++ b/.drone.yml
@@ -46,8 +46,10 @@ pipeline:
     commands:
       - du -ks harbor-offline-installer-*.tgz | awk '{print $1 / 1024}' | { read x; echo $x MB; }
       - mkdir -p bundle
+      - mkdir -p latest
+      - echo $(git describe --tags) > version 
       - cp harbor-offline-installer-*.tgz bundle
-      - cp harbor-offline-installer-*.tgz bundle/harbor-offline-installer-latest.tgz
+      - cp harbor-offline-installer-*.tgz latest/harbor-offline-installer-latest.tgz
       - ls -la bundle
     when:
       repo: vmware/harbor
@@ -92,6 +94,20 @@ pipeline:
       repo: vmware/harbor
       event: [ push, tag ]
       branch: [ release-*, refs/tags/* ]
+      status: success
+
+  publish-gcs-latest:
+    image: maplain/drone-gcs:latest
+    pull: true
+    source: latest
+    target: harbor-ci-pipeline-store/latest
+    acl:
+      - allUsers:READER
+    cache_control: public,max-age=3600
+    when:
+      repo: vmware/harbor
+      event: [ push, tag ]
+      branch: [ master, release-*, refs/tags/* ]
       status: success
 
   trigger:
