--- a/contrib/helm/harbor/Chart.yaml
+++ b/contrib/helm/harbor/Chart.yaml
@@ -1,11 +1,12 @@
 name: harbor
 version: 0.0.1
 appVersion: 1.3.0
-description: VMWare Enterprise Grade Docker Registry
+description: An Enterprise-class Docker Registry Harbor by VMware
 keywords:
 - vmware
 - docker
 - registry
+- harbor
 home: https://github.com/vmware/harbor
 icon: https://github.com/vmware/harbor/blob/master/docs/img/harbor_logo.png
 sources:
