--- a/.drone.yml
+++ b/.drone.yml
@@ -37,7 +37,9 @@ pipeline:
 
   notify-slack:
     image: plugins/slack
-    webhook: ${SLACK_URL}
+    secrets:
+      - source: slack_url
+        target: slack_webhook
     username: drone
     template: >
       build https://ci.vcna.io/vmware/harbor/{{ build.number }} finished with a {{ build.status }} status. Please find logs at https://storage.googleapis.com/harbor-ci-logs/integration_logs_{{ build.number }}_{{ build.commit }}.tar.gz
@@ -49,7 +51,8 @@ pipeline:
   trigger:
     image: plugins/downstream
     server: https://ci.vcna.io
-    token: ${DOWNSTREAM_TOKEN}
+    secrets:
+      - downstream_token
     fork: true
     repositories:
        - vmware/vic-product
