Copy drone dir to host

--- a/.drone.yml
+++ b/.drone.yml
@@ -48,10 +48,11 @@ pipeline:
       - npm_password
       - npm_username
     volumes:
-      - '/dev:/dev'
+      - '/drone:/host_drone'
       - '/var/run/docker.sock:/var/run/docker.sock'
     commands:
       - export DOMAIN=${CI_DOMAIN}
+      - cp -a /drone/. /host_drone/
       - tests/integration.sh
     when:
       status: success
