--- a/contrib/helm/harbor/templates/adminserver/adminserver-secrets.yaml
+++ b/contrib/helm/harbor/templates/adminserver/adminserver-secrets.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: "{{ template "harbor.fullname" . }}-adminserver"
   labels:
-{{ include "helm.labels" . | indent 4 }}
+{{ include "harbor.labels" . | indent 4 }}
 type: Opaque
 data:
   key: {{ .Values.adminserver.key | b64enc | quote }}
