--- a/contrib/helm/harbor/templates/ingress/secret.yaml
+++ b/contrib/helm/harbor/templates/ingress/secret.yaml
@@ -1,11 +1,13 @@
+{{ if not .Values.insecureRegistry }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: "{{ template "harbor.fullname" . }}-ingress"
   labels:
-{{ include "helm.labels" . | indent 4 }}
+{{ include "harbor.labels" . | indent 4 }}
 type: kubernetes.io/tls
 data:
   tls.crt: {{ .Values.tlsCrt | b64enc | quote }}
   tls.key: {{ .Values.tlsKey | b64enc | quote }}
   ca.crt: {{ .Values.caCrt | b64enc | quote }}
+{{ end }}
