--- a/contrib/helm/harbor/templates/ui/ui-secrets.yaml
+++ b/contrib/helm/harbor/templates/ui/ui-secrets.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: "{{ template "harbor.fullname" . }}-ui"
   labels:
-{{ include "helm.labels" . | indent 4 }}
+{{ include "harbor.labels" . | indent 4 }}
 type: Opaque
 data:
   secret: {{ .Values.ui.secret | b64enc | quote }}
