--- a/contrib/helm/harbor/Chart.yaml
+++ b/contrib/helm/harbor/Chart.yaml
@@ -1,7 +1,7 @@
 name: harbor
-version: 0.0.1
-appVersion: 1.3.0
-description: An Enterprise-class Docker Registry Harbor by VMware
+version: 0.1.0
+appVersion: 1.4.0
+description: An Enterprise-class Docker Registry by VMware
 keywords:
 - vmware
 - docker
