--- a/contrib/helm/harbor/templates/jobservice/jobservice-dpl.yaml
+++ b/contrib/helm/harbor/templates/jobservice/jobservice-dpl.yaml
@@ -1,16 +1,20 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: "{{ template "harbor.fullname" . }}-jobservice"
   labels:
-{{ include "helm.labels" . | indent 4 }}
+{{ include "harbor.labels" . | indent 4 }}
     component: jobservice
 spec:
+  selector:
+    matchLabels:
+{{ include "harbor.matchLabels" . | indent 6 }}
+      component: jobservice
   replicas: 1
   template:
     metadata:
       labels:
-{{ include "helm.labels" . | indent 8 }}
+{{ include "harbor.labels" . | indent 8 }}
         component: jobservice
     spec:
       containers:
