--- a/contrib/helm/harbor/templates/jobservice/jobservice-secrets.yaml
+++ b/contrib/helm/harbor/templates/jobservice/jobservice-secrets.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: "{{ template "harbor.fullname" . }}-jobservice"
   labels:
-{{ include "helm.labels" . | indent 4 }}
+{{ include "harbor.labels" . | indent 4 }}
 type: Opaque
 data:
   JOBSERVICE_SECRET: {{ .Values.jobservice.secret | b64enc | quote }}
