--- a/contrib/helm/harbor/templates/ui/ui-dpl.yaml
+++ b/contrib/helm/harbor/templates/ui/ui-dpl.yaml
@@ -3,14 +3,14 @@ kind: Deployment
 metadata:
   name: "{{ template "harbor.fullname" . }}-ui"
   labels:
-{{ include "helm.labels" . | indent 4 }}
+{{ include "harbor.labels" . | indent 4 }}
     component: ui
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-{{ include "helm.labels" . | indent 8 }}
+{{ include "harbor.labels" . | indent 8 }}
         component: ui
     spec:
       containers:
