--- a/src/ui_ng/package.json
+++ b/src/ui_ng/package.json
@@ -27,9 +27,9 @@
         "@ngx-translate/http-loader": "0.0.3",
         "@types/jquery": "^2.0.41",
         "@webcomponents/custom-elements": "^1.0.0",
-        "clarity-angular": "^0.10.27",
-        "clarity-icons": "^0.10.17",
-        "clarity-ui": "^0.10.27",
+        "clarity-angular": "0.10.23",
+        "clarity-icons": "0.10.23",
+        "clarity-ui": "0.10.23",
         "core-js": "^2.4.1",
         "harbor-ui": "0.6.63",
         "intl": "^1.2.5",
