Do not run `chown` to config files
As described in #4496, a recent security enhancement in kubernetes mount
configMap volume as readonly.  This commit make necessary update to the
entry points scripts and path of the config files to follow this
convention, such that the `chown` will not be called against them.

use new private key path for signing token

fix test failure

--- a/make/common/templates/notary/server-config.json
+++ b/make/common/templates/notary/server-config.json
@@ -6,7 +6,7 @@
 		"type": "remote",
 		"hostname": "notarysigner",
 		"port": "7899",
-		"tls_ca_file": "./notary-signer-ca.crt",
+		"tls_ca_file": "./private/notary-signer-ca.crt",
 		"key_algorithm": "ecdsa"
 	},
 	"logging": {
@@ -22,7 +22,7 @@
             "realm": "$token_endpoint/service/token",
             "service": "harbor-notary",
             "issuer": "harbor-token-issuer",
-            "rootcertbundle": "/config/root.crt"
+            "rootcertbundle": "/etc/notary/private/root.crt"
         }
     }
 }
