Add ldap-search-password support to Helm COntrib

--- a/contrib/helm/harbor/values.yaml
+++ b/contrib/helm/harbor/values.yaml
@@ -71,6 +71,7 @@ adminserver:
   ldap:
     url: "ldaps://ldapserver"
     searchDN: ""
+    searchPassword: ""
     baseDN: ""
     filter: "(objectClass=person)"
     uid: "uid"
