Setting custom database name is implemented.
Signed-off-by: odg0318 <odg0318@gmail.com>

--- a/make/harbor.cfg
+++ b/make/harbor.cfg
@@ -138,6 +138,9 @@ db_port = 5432
 #The user name of Harbor database
 db_user = postgres
 
+#The database name of Harbor database
+db_name = registry
+
 ##### End of Harbor DB configuration#######
 
 #The redis server address. Only needed in HA installation.
