--- a/contrib/helm/harbor/templates/adminserver/adminserver-ss.yaml
+++ b/contrib/helm/harbor/templates/adminserver/adminserver-ss.yaml
@@ -17,6 +17,13 @@ spec:
       labels:
 {{ include "harbor.labels" . | indent 8 }}
         component: adminserver
+{{- if .Values.adminserver.podLabels }}
+{{ toYaml .Values.adminserver.podLabels | indent 8 }}
+{{- end }}
+      {{- if .Values.adminserver.podAnnotations }}
+      annotations:
+{{ toYaml .Values.adminserver.podAnnotations | indent 8 }}
+      {{- end }}
     component: adminserver
     spec:
       containers:
