--- a/contrib/helm/harbor/templates/notary/notary-signer.yaml
+++ b/contrib/helm/harbor/templates/notary/notary-signer.yaml
@@ -17,6 +17,13 @@ spec:
       labels:
 {{ include "harbor.labels" . | indent 8 }}
         component: notary-signer
+{{- if .Values.notary.signer.podLabels }}
+{{ toYaml .Values.notary.signer.podLabels | indent 8 }}
+{{- end }}
+      {{- if .Values.notary.signer.podAnnotations }}
+      annotations:
+{{ toYaml .Values.notary.signer.podAnnotations | indent 8 }}
+      {{- end }}
     spec:
       containers:
       - name: notary-signer
