fix rxjs compat

--- a/src/ui_ng/package.json
+++ b/src/ui_ng/package.json
@@ -36,6 +36,7 @@
         "mutationobserver-shim": "^0.3.2",
         "ngx-cookie": "^1.0.0",
         "rxjs": "^6.2.2",
+        "rxjs-compat": "^6.2.2",
         "ts-helpers": "^1.1.1",
         "types": "^0.1.1",
         "web-animations-js": "^2.2.1",
