--- a/src/ui_ng/package.json
+++ b/src/ui_ng/package.json
@@ -15,16 +15,6 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^6.0.0",
-        "@angular/common": "^6.0.0",
-        "@angular/compiler": "^6.0.9",
-        "@angular/compiler-cli": "^6.0.9",
-        "@angular/core": "^6.0.0",
-        "@angular/forms": "^6.0.0",
-        "@angular/http": "^6.0.0",
-        "@angular/platform-browser": "^6.0.0",
-        "@angular/platform-browser-dynamic": "^6.0.0",
-        "@angular/router": "^6.0.0",
         "@clr/angular": "^0.12.0",
         "@clr/icons": "^0.12.0",
         "@clr/ui": "^0.12.0",
@@ -32,44 +22,59 @@
         "@ngx-translate/http-loader": "0.0.3",
         "@types/jquery": "^2.0.41",
         "@webcomponents/custom-elements": "^1.1.3",
-        "core-js": "^2.4.1",
         "intl": "^1.2.5",
         "mutationobserver-shim": "^0.3.2",
         "ngx-cookie": "^1.0.0",
-        "rxjs": "^6.2.2",
         "rxjs-compat": "^6.2.2",
         "ts-helpers": "^1.1.1",
         "types": "^0.1.1",
         "web-animations-js": "^2.2.1",
         "yarn": "^1.7.0",
-        "zone.js": "0.8.19"
+        "@angular/animations": "^6.0.3",
+        "@angular/common": "^6.0.3",
+        "@angular/compiler": "^6.0.3",
+        "@angular/core": "^6.0.3",
+        "@angular/forms": "^6.0.3",
+        "@angular/http": "^6.0.3",
+        "@angular/platform-browser": "^6.0.3",
+        "@angular/platform-browser-dynamic": "^6.0.3",
+        "@angular/router": "^6.0.3",
+        "core-js": "^2.5.4",
+        "rxjs": "^6.0.0",
+        "zone.js": "^0.8.26"
     },
     "devDependencies": {
-        "@angular/cli": "^6.0.8",
+        "@angular-devkit/build-angular": "~0.6.8",
+        "@angular/cli": "~6.0.8",
+        "@angular/compiler-cli": "^6.0.3",
+        "@angular/language-service": "^6.0.3",
         "@types/core-js": "^0.9.41",
-        "@types/jasmine": "~2.5.53",
-        "@types/node": "~6.0.60",
+        "@types/jasmine": "~2.8.6",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
         "bootstrap": "4.0.0-alpha.5",
-        "codelyzer": "~2.0.0-beta.4",
+        "codelyzer": "~4.2.1",
         "enhanced-resolve": "^3.0.0",
         "harbor-ui": "0.7.19-dev.9",
-        "jasmine-core": "2.4.1",
-        "jasmine-spec-reporter": "2.5.0",
-        "karma": "~1.7.0",
-        "karma-chrome-launcher": "~2.1.1",
+        "jasmine-core": "~2.99.1",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~1.7.1",
+        "karma-chrome-launcher": "~2.2.0",
         "karma-cli": "^1.0.1",
-        "karma-jasmine": "~1.1.0",
+        "karma-coverage-istanbul-reporter": "~2.0.0",
+        "karma-jasmine": "~1.1.1",
+        "karma-jasmine-html-reporter": "^0.2.2",
         "karma-mocha-reporter": "^2.2.4",
         "karma-remap-istanbul": "^0.2.1",
         "ng-packagr": "^3.0.3",
-        "protractor": "4.0.9",
+        "protractor": "~5.3.0",
         "rollup": "^0.41.6",
         "rollup-plugin-commonjs": "^8.0.2",
         "rollup-plugin-node-resolve": "^3.0.0",
         "rollup-plugin-uglify": "^1.0.1",
-        "ts-node": "1.2.1",
-        "tslint": "^4.1.1",
-        "typescript": "^2.7.2",
+        "ts-node": "~5.0.1",
+        "tslint": "~5.9.1",
+        "typescript": "^2.6.2",
         "typings": "^1.5.0",
         "uglify-js": "3.3.18",
         "webdriver-manager": "10.2.5"
