--- a/src/ui_ng/package.json
+++ b/src/ui_ng/package.json
@@ -15,21 +15,6 @@
     },
     "private": true,
     "dependencies": {
-        "@clr/angular": "^0.12.0",
-        "@clr/icons": "^0.12.0",
-        "@clr/ui": "^0.12.0",
-        "@ngx-translate/core": "^6.0.0",
-        "@ngx-translate/http-loader": "0.0.3",
-        "@types/jquery": "^2.0.41",
-        "@webcomponents/custom-elements": "^1.1.3",
-        "intl": "^1.2.5",
-        "mutationobserver-shim": "^0.3.2",
-        "ngx-cookie": "^1.0.0",
-        "rxjs-compat": "^6.2.2",
-        "ts-helpers": "^1.1.1",
-        "types": "^0.1.1",
-        "web-animations-js": "^2.2.1",
-        "yarn": "^1.7.0",
         "@angular/animations": "^6.0.3",
         "@angular/common": "^6.0.3",
         "@angular/compiler": "^6.0.3",
@@ -39,8 +24,24 @@
         "@angular/platform-browser": "^6.0.3",
         "@angular/platform-browser-dynamic": "^6.0.3",
         "@angular/router": "^6.0.3",
+        "@clr/angular": "^0.12.0",
+        "@clr/icons": "^0.12.0",
+        "@clr/ui": "^0.12.0",
+        "@ngx-translate/core": "^6.0.0",
+        "@ngx-translate/http-loader": "0.0.3",
+        "@types/jquery": "^2.0.41",
+        "@webcomponents/custom-elements": "^1.1.3",
         "core-js": "^2.5.4",
+        "intl": "^1.2.5",
+        "mutationobserver-shim": "^0.3.2",
+        "ngx-clipboard": "^11.1.1",
+        "ngx-cookie": "^1.0.0",
         "rxjs": "^6.0.0",
+        "rxjs-compat": "^6.2.2",
+        "ts-helpers": "^1.1.1",
+        "types": "^0.1.1",
+        "web-animations-js": "^2.2.1",
+        "yarn": "^1.7.0",
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
