debug travis go test coverage issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -100,6 +100,7 @@ script:
   - cd .. 
   - go test -race -i ./src/ui ./src/adminserver ./src/jobservice
   - sudo -E env "PATH=$PATH" "POSTGRES_MIGRATION_SCRIPTS_PATH=/home/travis/gopath/src/github.com/vmware/harbor/make/migrations/postgresql/" ./tests/coverage4gotest.sh
+  - cat profile.cov
   - goveralls -coverprofile=profile.cov -service=travis-ci
   - docker-compose -f make/docker-compose.test.yml down
   - ls /data/cert
