--- a/contrib/helm/harbor/templates/chartmuseum/chartmuseum-secret.yaml
+++ b/contrib/helm/harbor/templates/chartmuseum/chartmuseum-secret.yaml
@@ -9,4 +9,13 @@ type: Opaque
 data:
   CACHE_REDIS_PASSWORD: "{{ template "harbor.redis.password" }}"
   BASIC_AUTH_PASS: {{ .Values.ui.secret | b64enc | quote }}
+{{- range $name, $value := .Values.chartmuseum.env.secret }}
+{{- if not (empty $value) }}
+{{- if eq $name "GOOGLE_CREDENTIALS_JSON" }}
+  {{ $name }}: {{ $value }}
+  {{- else }}
+  {{ $name }}: {{ $value | b64enc }}
+{{- end }}
+{{- end }}
+{{- end }}
 {{- end }}
