fix build lib failure
Signed-off-by: Meina Zhou <meinaz@vmware.com>

--- a/src/ui_ng/tsconfig-aot.json
+++ b/src/ui_ng/tsconfig-aot.json
@@ -19,7 +19,7 @@
     "src/main-aot.ts"
   ],
   "angularCompilerOptions": {
-    "genDir": "aot",
+    "skipTemplateCodegen": true,
     "skipMetadataEmit" : true
   }
 }
